k8s_manifests/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: chat-app-ns
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      labels:
        app: backend
    spec:
      containers:
      - name: chatapp-backend
        image: ashwini0709/chatapp-backend:latest
        ports:
        - containerPort: 5001
