k8s_manifests/mongodb-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb-deployment
  namespace: chat-app-ns
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      name: mongodb-pod
      labels:
        app: mongodb
    spec:
      containers:
      - name: chatapp-mongodb
        image: mongo:latest 
        ports:
        - containerPort: 27017
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
