k8s_manifests/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: chat-app-ns
spec:
  selector:
    app: backend
  ports:
  - port: 5001
    targetPort: 5001
