k8s_manifests/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  namespace: chat-app-ns
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
