k8s_manifests/mongodb-service.yml
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  namespace: chat-app-ns
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
